--- a/modules/Base/StatusBar/theme/default.css
+++ b/modules/Base/StatusBar/theme/default.css
@@ -1,14 +1,12 @@
 #statusbar_content {
-	background: gray;
-	height: 100%;
-	padding: 5px;
+	background: green;
 }
 
 .Base_StatusBar img {
-	background-image: url('Base/StatusBar/loader.gif');
 	position: absolute;
-	left: 30px;
-	top: 35px;
+	float: right;
+	right: 10px;
+	top: 10px;
 	z-index: 2002;
 }
 
@@ -17,54 +15,25 @@
   	position: fixed;
 	top: 0px;
 	left: 0px;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	vertical-align: middle;
-	background-color: gray;
+	width: 200px;
+	height: 20px;
+	text-align: right;
+	background-color: red;
 }
 
-.Base_StatusBar div.layer {
-  	position: fixed;
-    padding: 10px;
-	width: 300px;
-	left: 50%;
-	top: 30%;
-	margin-left: -110px;
-}
-
-.Base_StatusBar .message {
-	width: 140px;
-	min-height: 20px;
-	line-height: 20px;
-	padding: 25px 0 25px 60px;
-	font-size: 16px;
-	font-weight: bold;
-	color: #336699;
-}
-
-.Base_StatusBar .span {
-	width: 140px;
-	min-height: 20px;
-	line-height: 20px;
-	padding: 25px 0 25px 60px;
-	font-size: 16px;
-	font-weight: bold;
-	color: #336699;
-}
-
-.Base_StatusBar .message .message {
-	margin-left: -60px;
-	margin-top: -25px;
-	margin-bottom: -25px;
+.Base_StatusBar .message {	
+    font-family: Tahoma, Verdana, Vera-Sans, DejaVu-Sans;
+	font-size: 18px;
+	color: #336699;	
+	background-repeat: no-repeat;
 }
 
 .Base_StatusBar .loading.message {
-	width: 30px;
-	line-height: 5px;
-	height: 5px;
+	background-image: url('Base/StatusBar/loader.gif');
 	background-color: #EEEEFF;
+	width: 100px;
 }
+
 .Base_StatusBar .normal.message {
 	background-image: none;
 	background-color: #EEEEFF;
