--- a/modules/Base/Box/theme/default.css
+++ b/modules/Base/Box/theme/default.css
@@ -1,104 +1,5 @@
-/* New Fonts introduced 'Exo 2' and 'Titillium Web'
+/* Global */
 
-<link href="https://fonts.googleapis.com/css?family=Exo+2:400,700|Titillium+Web:400,700&display=swap" rel="stylesheet">
-
-font-family: 'Exo 2', sans-serif;
-font-family: 'Titillium Web', sans-serif;
-
-Epesi colors:
-
-Navy Blue
-background: #0A3C5C;
-Dark Green
-background: #1FAF53;
-Yellow
-background: #DEB42F;
-
- */
-
-@font-face {
-  font-family: 'Exo 2', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Exo 2', sans-serif;
-  font-style: bold;
-  font-weight: 700;
-  }
-
-@font-face {
-  font-family: 'Titillium Web', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Titillium Web', sans-serif;
-  font-style: bold;
-  font-weight: 700;
-}
-
-body, p {
-	font-family: 'Titillium Web', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-    font-size: 12px;
-    color: #0A3C5C;
-	background-color: #FFFFFF;
-}
-
-*, html {
-    font-family: 'Titillium Web', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-    font-size: 12px;
-    color: #000;
-}
-
-a {
-    font-family: 'Exo 2', sans-serif;
-	font-style: bold;
-	font-weight: 700;
-	font-size: 12px;
-	color: #336699;
-	text-decoration: none;
-	vertical-align: top;
-}
-
-ul, ol, li {
-    font-family: 'Exo 2', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-    font-size: 12px;
-    color: #011;
-}
-
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Exo 2', sans-serif;
-  font-style: bold;
-  font-weight: 400;
-  font-size: 14px;
-  color: #043d5f;
-}
-
-h1, h2 {
-  font-family: 'Exo 2', sans-serif;
-  font-style: bold;
-  font-weight: 700;
-  font-size: 16px;
-  color: #043d5f;
-}
-
-h2 {
-	font-size: 12px;
-	text-align: center;
-	text-decoration: underline;
-}
 .nonselectable {
 	-moz-user-select: none;
 	-webkit-user-select: none;
@@ -106,6 +7,14 @@ h2 {
 	user-select: none;
 }
 
+body {
+	padding: 0;
+	margin: 0;
+	font-family: Tahoma, Verdana, Vera-Sans, DejaVu-Sans, sans-serif;
+	font-size: 11px;
+	background-color: #F0F0F0;
+	position: relative; /* needed by prototype 1.7 for clone position */
+}
 
 /* for debug uncomment following lines */
 /*
@@ -115,13 +24,15 @@ div (
 */
 
 table {
-	font-family: 'Titillium Web', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 10px;
+	font-size: 11px;
 	table-layout: fixed;
 }
 
+a {
+	color: #336699;
+	text-decoration: none;
+	vertical-align: top;
+}
 
 a:hover {
 	color: #993333;
@@ -132,29 +43,15 @@ a:hover {
 }
 
 input, textarea, select {
-	font-family: 'Titillium Web', sans-serif;
-	font-style: normal;
-	font-weight: 400;
-    font-size: 12px;
-    color: #001;
+	font-family: Tahoma, Verdana, Vera-Sans, DejaVu-Sans, sans-serif;
+	font-size: 11px;
 	border: 1px solid #B3B3B3;
 }
 
 textarea {
-	width:98%;
+	width:99%;
 }
 
-/*
-Epesi colors:
-
-Navy Blue
-background: #0A3C5C;
-Dark Green
-background: #1FAF53;
-Yellow
-background: #DEB42F;
-
- */
 .red     { color: #993333; }
 .green   { color: #339933; }
 .blue    { color: #336699; }
@@ -167,9 +64,6 @@ background: #DEB42F;
 .child_button > input,
 .child_button > div > input,
 .button {
-	font-family: 'Exo 2', sans-serif;
-	font-style: bold;
-	font-weight: 700;
 	cursor: pointer;
     font-weight: normal;
     color: #FFFFFF;
@@ -179,6 +73,7 @@ background: #DEB42F;
     border: none;
     text-align: center;
     vertical-align: middle;
+
 	background: #226622;
 }
 .button {
@@ -219,7 +114,7 @@ hr.line {
 }
 
 #Base_Box__login .status {
-	height: 20px;
+	height: 40px;
 }
 
 #Base_Box__login .entry {
@@ -238,13 +133,13 @@ hr.line {
    /* position: absolute; */
     /*margin-top: 97px;*/
     width: 100%;
-    padding: 5px;
+    padding: 0px;
     border-top: 1px solid transparent;
     /*text-align: center;*/
 }
 
 #body_content {
-    padding-top: 120px;
+    padding-top: 123px;
     width: 100%;
 }
 
@@ -256,7 +151,7 @@ hr.line {
 
 #main_content {
 	position: relative;
-	width: 100%;
+	/* width: 100%; */
 }
 
 #debug {
@@ -284,15 +179,15 @@ hr.line {
 }
 
 #MenuBar {
-	background-color: #FEFEFE;
+	background-color: #F0F0F0;
 }
 #ActionBar {
     overflow: hidden;
-    height: 100px;
+    height: 90px;
 }
 
 #ShadowBar {
-    height: 20px;
+    height: 10px;
     background-image: url('images/shadow/b.png');
     background-repeat: repeat-x;
     display: none;
@@ -315,15 +210,10 @@ hr.line {
 
 #top_bar #top_bar_1 .menu-bar {
 	height: 20px;
-	width: 40px;
+	width: 93px;
 	text-align: left;
-	background: #226622;
 	
-	/* css3 shadow border*/
-	-webkit-box-shadow: 2px 2px 5px green;
-	-moz-box-shadow: 2px 2px 5px green;
-	box-shadow: 2px 2px 5px green;
-	/* end css3 shadow border*/
+	background: #226622;
 }
 
 #top_bar #top_bar_1 .menu-bar:hover { 
@@ -344,12 +234,6 @@ hr.line {
 	text-align: left;
 	cursor: pointer;
 	background: #226622;
-	
-	/* css3 shadow border*/
-	-webkit-box-shadow: 0px 0px 3px #000000;
-	-moz-box-shadow: 0px 0px 3px #000000;
-	box-shadow: 0px 0px 3px #000000;
-	/* end css3 shadow border*/
 }
 
 #top_bar #top_bar_1 .home-bar:hover {
@@ -365,9 +249,8 @@ hr.line {
 }
 
 .home-bar-text {
-	font-family: 'Exo 2', sans-serif;
-    font-size: 14px;
-	padding-top: 2px;
+	font-size: 11px;
+	padding-top: 4px;
 	color: white;
 	font-weight: bold;
 	text-align: left;
@@ -381,13 +264,7 @@ hr.line {
 	width: 138px;
 	text-align: left;
 	overflow: hidden;
-    background: #226622;
-	
-	/* css3 shadow border*/
-	-webkit-box-shadow: 1px 1px 3px #gray;
-	-moz-box-shadow: 1px 1px 3px #gray;
-	box-shadow: 1px 1px 3px #gray;
-	/* end css3 shadow border*/
+	background: #226622;
 }
 
 #top_bar #top_bar_1 .quick-access-bar:hover { 
@@ -399,16 +276,11 @@ hr.line {
 }
 
 #top_bar #top_bar_1 .filler {
-	/* css3 shadow border*/
-	-webkit-box-shadow: 0px 0px 3px #000000;
-	-moz-box-shadow: 0px 0px 3px #000000;
-	box-shadow: 0px 0px 3px #000000;
-	/* end css3 shadow border*/
 }
 
 #top_bar #top_bar_1 .powered {
-    vertical-align: bottom;
-    font-size: 10px;
+    vertical-align: middle;
+    font-size: 9px;
     color: white;
     text-align: right;
 	padding-right: 5px;
@@ -418,7 +290,7 @@ hr.line {
 
 #top_bar #top_bar_1 .powered div {
     display:inline-block;
-	max-width:300px;
+	max-width:150px;
 	overflow:hidden;
 }
 
@@ -434,11 +306,11 @@ hr.line {
 }
 
 #top_bar #top_bar_1 .donate {
-	width: 100px;
+	width: 70px;
 	color: white;
 	padding-right: 4px;
 	text-align: center;
-	font-size: 10px;
+	font-size: 9px;
 }
 
 #top_bar #top_bar_1 .donate a {
@@ -457,12 +329,6 @@ hr.line {
 	width: 70px;
 	height: auto;
 	overflow: hidden;
-	
-	/* css3 shadow border*/
-	-webkit-box-shadow: 0px 0px 3px #000000;
-	-moz-box-shadow: 0px 0px 3px #000000;
-	box-shadow: 0px 0px 3px #000000;
-	/* end css3 shadow border*/
 }
 
 #top_bar #top_bar_1 .module-indicator {
@@ -486,9 +352,9 @@ hr.line {
 }
 
 #top_bar #top_bar_1 .module-indicator #quick-logout {
-    width: 30px;
-    height: 30px;
-    float: left;
+    width: 20px;
+    height: 20px;
+    float: right;
     border-left: 4px solid #b3b3b3;
     background-image: url('Base/Box/logout.png');
     background-repeat: no-repeat;
@@ -496,6 +362,7 @@ hr.line {
 }
 
 #top_bar #top_bar_1 .module-indicator #quick-logout:hover {
+    background-image: url('Base/Box/logout-hover.png');
 }
 
 /*** top_bar_2 ***/
@@ -512,6 +379,13 @@ hr.line {
 	text-align: left;
 	vertical-align: top;
 }
+
+.content_shadow_css3 {
+	/* css3 shadow border*/
+	-webkit-box-shadow: 1px 1px 3px #gray;
+	-moz-box-shadow: 1px 1px 3px #gray;
+	box-shadow: 1px 1px 3px #gray;
+	/* end css3 shadow border*/}
 	
 .shadow_css3_logo_border {
 	width: 193px;
@@ -519,6 +393,26 @@ hr.line {
 	background-color: #fff;
 	padding: 0px;
 	overflow: hidden;
+	/* css3 shadow border*/
+	-webkit-box-shadow: 1px 1px 6px gray;
+	-moz-box-shadow: 1px 1px 6px gray;
+	box-shadow: 1px 1px 6px gray;
+	/* end css3 shadow border*/
+	
+	/* border bottom radius */
+	-webkit-border-top-left-radius: 0px;
+	-webkit-border-top-right-radius: 0px;
+	-webkit-border-bottom-right-radius: 6px;
+	-webkit-border-bottom-left-radius: 6px;
+	-moz-border-radius-topleft: 0px;
+	-moz-border-radius-topright: 0px;
+	-moz-border-radius-bottomright: 6px;
+	-moz-border-radius-bottomleft: 6px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px; 
+	/* end border bottom radius */
 }
 	
 	
@@ -540,7 +434,7 @@ hr.line {
 	background-color: #fff;
 	padding: 0px;
 	overflow: hidden;
-	background: #ffffff;
+	background: #efefef;
 }
 	
 .icons_launchpad {
@@ -552,9 +446,9 @@ hr.line {
 	width: 70px;
 	height: 83px;
 	margin: 0px;
-	background-color: #fff;
+	background-color: #DADADA;
 	padding: 0px;
-	background: #ffffff;
+	background: #ADADAD;
 }	
 	
 #top_bar #top_bar_2 #login-search-td {
@@ -573,7 +467,7 @@ hr.line {
 
 
 #top_bar #top_bar_2 .search {
-	height: 30px;
+	height: 20px;
 	vertical-align: top;
 	text-align: left;
 	padding-left: 3px;
@@ -584,6 +478,67 @@ hr.line {
 }
 
 
+/*	=layer
+---------------------------------------------------------------------------- */
+
+.layer {
+	margin: 0px;
+	padding: 2px 8px 10px 8px;
+	position: relative;
+}
+
+.layer .content_shadow {
+	z-index: 1;
+}
+
+/*	=shadow
+---------------------------------------------------------------------------- */
+
+.layer .left,
+.layer .right,
+.layer .center {
+	position: absolute;
+}
+
+.layer .shadow-top .left,
+.layer .shadow-top .right,
+.layer .shadow-bottom .left,
+.layer .shadow-bottom .right {
+	width: 20px;
+	height: 20px;
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+
+.layer .shadow-top .center,
+.layer .shadow-bottom .center {
+	height: 10px;
+	right: 20px;
+	left: 20px;
+	background-repeat: repeat-x;
+}
+
+.layer .shadow-middle div {
+	width: 10px;
+	bottom: 20px;
+	top: 20px;
+	background-repeat: repeat-y;
+}
+
+.layer .shadow-top div { top: 0; }
+.layer .shadow-bottom div { bottom: 0; }
+
+.layer .left { left: 0; }
+.layer .right { right: 0; }
+
+.layer .shadow-top		.left	{ background-image: url('images/shadow/tl.png'); }
+.layer .shadow-top		.right	{ background-image: url('images/shadow/tr.png'); }
+.layer .shadow-bottom	.left	{ background-image: url('images/shadow/bl.png'); }
+.layer .shadow-bottom	.right	{ background-image: url('images/shadow/br.png'); }
+.layer .shadow-top		.center	{ background-image: url('images/shadow/t.png' ); }
+.layer .shadow-bottom	.center	{ background-image: url('images/shadow/b.png' ); }
+.layer .shadow-middle	.left	{ background-image: url('images/shadow/l.png' ); }
+.layer .shadow-middle	.right	{ background-image: url('images/shadow/r.png' ); }
 
 .help_label {
 	margin-left: 17px;
@@ -610,6 +565,65 @@ hr.line {
 .help:hover {
 }
 
+
+
+
+
+/* Global styles */
+	
+	/* shadows */
+		.shadow_5px_left {
+			/* css3 shadow border*/
+			-webkit-box-shadow: -1px 1px 5px black;
+			-moz-box-shadow: -1px 1px 5px black;
+			box-shadow: -1px 1px 5px black;
+			/* end css3 shadow border*/
+		}
+	
+	
+		.shadow_5px {
+			/* css3 shadow border*/
+			-webkit-box-shadow: 1px 1px 5px black;
+			-moz-box-shadow: 1px 1px 5px black;
+			box-shadow: 1px 1px 5px black;
+			/* end css3 shadow border*/
+		}
+		
+		.shadow_15px {
+			/* css3 shadow border*/
+			-webkit-box-shadow: 1px 1px 15px black;
+			-moz-box-shadow: 1px 1px 15px black;
+			box-shadow: 1px 1px 15px black;
+			/* end css3 shadow border*/
+		}
+	/* shadows */
+
+	/* radius borders */
+		.border_radius_3px {
+			/* border radius */
+			-webkit-border-radius: 1px;
+			-moz-border-radius: 1px;
+			border-radius: 1px;
+			/* end border radius */
+		}	
+		.border_radius_6px {
+			/* border radius */
+			-webkit-border-radius: 2px;
+			-moz-border-radius: 2px;
+			border-radius: 2px;
+			/* end border radius */
+		}	
+	/* end radius borders */
+
+
+	/* gradients */
+		.dark_blue_gradient {
+			background: #7b9cbd;
+		}
+	/* end gradients */
+
+/* end Global styles */
+
 .important_notice {
 	width: 750px;
 	background-color: #E0E0E0;
@@ -621,10 +635,6 @@ hr.line {
 	margin: 20px;
 	
 	border: 1px solid gray;
-
-	-webkit-box-shadow: 2px 2px 6px black;
-	-moz-box-shadow: 2px 2px 6px black;
-	box-shadow: 2px 2px 6px black;
 }
 
 .important_notice_frame {
@@ -638,10 +648,6 @@ hr.line {
 	margin-bottom: 3px;
 	
 	border: 1px solid lightgray;
-
-	-webkit-box-shadow: inset 2px 2px 3px gray;
-	-moz-box-shadow: inset 2px 2px 3px gray;
-	box-shadow: inset 2px 2px 3px gray;
 }
 
 #client_messages_frame {
@@ -671,14 +677,10 @@ hr.line {
 	border: 1px solid gray;
 	text-align: left;
 	padding: 8px;
-	font-size: 16px;
+	font-size: 13px;
 	z-index: 1500;
     background-color: white;
     margin: 10px;
-
-	-webkit-box-shadow: 3px 3px 11px #444;
-	-moz-box-shadow: 3px 3px 11px #444;
-	box-shadow: 3px 3px 11px #444;
 }
 
 .popup_notice_frame {
@@ -688,10 +690,6 @@ hr.line {
 	margin: 3px -3px 0;
     position: relative;
     padding-bottom: 10px;
-
-	-webkit-box-shadow: 1px 1px 2px #999;
-	-moz-box-shadow: 1px 1px 2px #999;
-	box-shadow: 1px 1px 2px #999;
 }
 
 .popup_notice_frame_close_button {
@@ -703,53 +701,38 @@ hr.line {
     font-size: 80%;
 }
 
-
-/* .epesi_big_button styling - used in admin panel and Launchpad */
-
-.epesi_big_button {
-	font-family: 'Exo 2', sans-serif;
-	font-style: bold;
-	font-weight: 700;
-	font-size: 16px;
-	cursor: hand;
-	background-color: #FEFEFE;
-	color: #0A3C5C;
-	border: #0A3C5C;
-	border: solid;
-	border: 1px;
-	box-shadow: 1px 3px 1px #999;
-	display: inline-block;
-	padding: 10px;
-	cursor: hand;
-	text-align: center;
-	margin: 24px;
- }
-
- .epesi_big_button:active {
-		transform: translateY(2px);
-	 }
-
-.epesi_big_button:hover {
-	box-shadow: 0 0 1px 1px rgba(0, 140, 186, 0.5);
-}
-
-.epesi_big_button > img {
-	display: block;
-	margin: 2px auto 3px;
-}
-
 .epesi_big_button > span,
 .epesi_big_button > div {
 	height: 26px;
-	width: 90px;
+	width: 60px;
 	display: table-cell;
 	vertical-align: middle;
-	text-align: ellipsis;
+	text-align: center;
 }
 
 .epesi_big_button > span:only-child,
 .epesi_big_button > div:only-child {
 	height: 55px;
+}
+
+.epesi_big_button {
+	cursor: pointer;
+	padding: 10px 13px;
+	margin: 7px;
+	border: 1px solid #999;
+	min-width: 60px;
+	text-align: center;
+	font-weight: bold;
+	background-color: #EFEFEF;
+}
+
+.epesi_big_button:hover {
+	background-color: #9E9;
+}
+
+.epesi_big_button > img {
+	display: block;
+	margin: 2px auto 3px;
 }
 
 .epesi_big_button.bigger {
@@ -771,52 +754,49 @@ hr.line {
 }
 
 .epesi_label {
-	font-family: 'Exo 2', sans-serif;
-  	font-style: bold;
-  	font-weight: 700;
-	font-size: 16px;
-	color: rgb(243, 234, 234);
-    height: 20px;
+    color: #FEFEFE;
+    height: 19px;
     vertical-align: middle;
     padding-left: 5px;
     padding-right: 5px;
-    width: 100%;
+    width: 100px;
     text-align: left;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	background: #0A3C5C;
+	background: #3f6a8c;
 }
 .epesi_label.top {
+	font-size: 20px;
 }
 
 .epesi_rtl .epesi_label {
 }
 
 .epesi_label.header {
-	font-family: 'Exo 2', sans-serif;
-	font-style: normal;
-	font-weight: 700;
-	height: 32px;
+	font-weight: bold;
+	height: 25px;
 	text-align: center;
-	vertical-align: middle;
-	width: 99%;
-    line-height: 32px;
-    font-size: 18px;
+	width: 100%;
+    line-height: 25px;
+    font-size: 13px;
 }
 
 .epesi_data {
 	text-align: left;
-	background-color: #FEFEFE;
-	color: #0A3C5C;
+	background-color: #FFFFF9;
 	width: 102px;
 	height: 20px;
-	padding: 2px;
+	padding: 0;
 	border-spacing: 0;
 }
-
+.epesi_data {
+}
+.epesi_rtl .epesi_data {
+	text-align: right;
+}
 .epesi_data > div {
-	min-height: 24px;
+	min-height: 20px;
 }
 
 .epesi_data input[type='checkbox'] {
@@ -828,16 +808,16 @@ hr.line {
 .epesi_data input:focus,
 .epesi_data select:focus,
 .epesi_data textarea:focus {
-    background-color: #ACACAC;
+    background-color: #ffffa5;
 }
 .epesi_data input,
 .epesi_data select,
 .epesi_data textarea {
 	width: 97%;
     min-width: 50px;
-	height: 30px;
-    background-color: #ACACAC;
-    border: 1px;
+	height: 14px;
+    background-color: #FFFFF9;
+    border: 0px;
 	padding: 3px 5px;
 }
 .epesi_data input[type=checkbox],
@@ -845,10 +825,10 @@ hr.line {
         min-width: 20px;
 }
 .epesi_data textarea {
-	height: 60px;
+	height: 63px;
 }
 .epesi_data select {
-	height: 18px;
+	height: 20px;
 	padding: 0;
 	margin-left: 2px;
 	margin-top: 2px;
@@ -866,8 +846,8 @@ hr.line {
 .epesi_data textarea {
 }
 .epesi_data.static_field {
-    line-height: 24px;
-    padding-left: 4px;
+    line-height: 22px;
+    padding-left: 5px;
 }
 
 .epesi_data.static_field,
@@ -892,7 +872,7 @@ hr.line {
 /* currency END */
 /* automulti START */
 .epesi_data.automulti select {
-	height: 96px;
+	height: 80px;
 }
 .epesi_data.automulti td {
 	padding: 0;
@@ -904,7 +884,7 @@ hr.line {
 }
 .epesi_data.automulti input[type="button"]{
 	height: 100%;
-	width: 99%;
+	width: 100%;
 	padding: 0;
 }
 .epesi_data.automulti input::-webkit-input-placeholder,
@@ -937,7 +917,7 @@ hr.line {
 	z-index: 5;
 	white-space: nowrap;
 	vertical-align: top;
-	background: #a72527;
+	background: #a72527
 }
 
 .epesi_data.textarea .form_error,
@@ -948,10 +928,10 @@ hr.line {
 	padding: 2px 10px;
 }
 .epesi_grey_board > table {
-	width: 99%;
-	border-spacing: 2px;
+	width: 100%;
+	border-spacing: 3px;
 	background-color: #CCC;
-	border: 1px thin;
+	border: 2px solid transparent;
 }
 
 .epesi_caption img {
@@ -960,21 +940,21 @@ hr.line {
 }
 
 .epesi_caption .label {
-	margin-left: 20px;
-	margin-top: 4px;
+	margin-left: 40px;
+	margin-top: 3px;
 }
 .epesi_rtl .epesi_caption .label {
-	margin-left: 2px;
-	margin-right: 20px;
+	margin-left: 0px;
+	margin-right: 40px;
 }
 
 .epesi_caption {
 	width: auto;
     text-align: left;
-    font-size: 24px;
+    font-size: 14px;
     font-weight: bold;
-    color: #DEB42F;
-    height: 28px;
+    color: #FFFFFF;
+    height: 24px;
     white-space: nowrap;
     vertical-align: top;
 	
@@ -983,7 +963,7 @@ hr.line {
 	padding: 5px 18px 0px;
 	display: inline-block;
 	margin-bottom: 7px;
-	background: #0A3C5C;
+	background: #9c9c9c;
 }
 
 pre.wrap {
