--- a/modules/Base/StatusBar/theme/default.css
+++ b/modules/Base/StatusBar/theme/default.css
@@ -1,12 +1,14 @@
 #statusbar_content {
-	background: green;
+	background: white;
+	height: 100%;
+	padding: 5px;
+	border-radius: 10px;
 }
 
 .Base_StatusBar img {
 	position: absolute;
-	float: right;
-	right: 10px;
-	top: 10px;
+	left: 30px;
+	top: 35px;
 	z-index: 2002;
 }
 
@@ -15,25 +17,46 @@
   	position: fixed;
 	top: 0px;
 	left: 0px;
-	width: 200px;
-	height: 20px;
-	text-align: right;
-	background-color: red;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	vertical-align: middle;
+	background-color: rgba(128, 128, 128, 0.3);
 }
 
-.Base_StatusBar .message {	
+.Base_StatusBar div.layer {
+  	position: fixed;
+    padding: 10px;
+	width: 210px;
+	left: 50%;
+	top: 30%;
+	margin-left: -110px;
+}
+
+.Base_StatusBar .message {
+	width: 140px;
+	min-height: 20px;
+	line-height: 20px;
+	padding: 25px 0 25px 60px;
+
     font-family: Tahoma, Verdana, Vera-Sans, DejaVu-Sans;
-	font-size: 18px;
+	font-size: 14px;
+	font-weight: bold;
 	color: #336699;	
 	background-repeat: no-repeat;
+	background-position: 15px 50%;
+}
+
+.Base_StatusBar .message .message {
+	margin-left: -60px;
+	margin-top: -25px;
+	margin-bottom: -25px;
 }
 
 .Base_StatusBar .loading.message {
 	background-image: url('Base/StatusBar/loader.gif');
 	background-color: #EEEEFF;
-	width: 100px;
 }
-
 .Base_StatusBar .normal.message {
 	background-image: none;
 	background-color: #EEEEFF;
