--- a/modules/Utils/Attachment/theme/view.css
+++ b/modules/Utils/Attachment/theme/view.css
@@ -3,17 +3,6 @@
 	height: auto;
 	padding: 9px;
 	margin-top: 10px;
-	/* css3 shadow border*/
-	-webkit-box-shadow: 1px 1px 5px black;
-	-moz-box-shadow: 1px 1px 5px black;
-	box-shadow: 1px 1px 5px black;
-	/* end css3 shadow border*/
-
-	/* border radius */
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	/* end border radius */
 }
 
 #Utils_Attachment__view {
@@ -21,50 +10,23 @@
     background-color: #FFFFFF;
     height: 400px;
 	border: 1px solid silver;
-	
-	/* css3 shadow border*/
-	-webkit-box-shadow: 1px 1px 2x gray;
-	-moz-box-shadow: 1px 1px 2px gray;
-	box-shadow: 1px 1px 2px gray;
-	/* end css3 shadow border*/
-
-	/* border radius */
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	/* end border radius */
 }
 
 
 #Utils_Attachment__view .header {
-    color: #ffffff;
+    color: #EFEFEFE;
     height: 40px;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: bold;
     vertical-align: middle;
     text-align: center;
-    /* border radius */
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	/* end border radius */
-
-	/* css3 blue gradient */
-	background: #7b9cbd; /* Old browsers */
-	background: -moz-linear-gradient(top, #7b9cbd 0%, #7b9cbd 50%, #336699 51%, #7b9cbd 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7b9cbd), color-stop(50%,#7b9cbd), color-stop(51%,#336699), color-stop(100%,#7b9cbd)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #7b9cbd 0%,#7b9cbd 50%,#336699 51%,#7b9cbd 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #7b9cbd 0%,#7b9cbd 50%,#336699 51%,#7b9cbd 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #7b9cbd 0%,#7b9cbd 50%,#336699 51%,#7b9cbd 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7b9cbd', endColorstr='#7b9cbd',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #7b9cbd 0%,#7b9cbd 50%,#336699 51%,#7b9cbd 100%); /* W3C */
-	/* end css3  gradient */
+    background: #7b9cbd;
 }
 
 #Utils_Attachment__view .file {
     vertical-align: top;
     text-align: left;
-    font-size: 12px;
+    font-size: 14px;
     height: 40px;
     width: 50px;
     vertical-align: middle;
@@ -109,7 +71,7 @@
 
 #Utils_Attachment__view .notepad-left {
     border-right: 2px solid #b3b3b3;
-    width: 50px;
+    width: 20%;
 }
 
 #Utils_Attachment__view .note {
@@ -118,7 +80,7 @@
 }
 
 .Utils_Attachment__table {
-    width: 100%;
+    width: 98%;
     vertical-align: middle;
     height: 31px;
 }
@@ -141,7 +103,7 @@
 }
 
 .Utils_Attachment__table .name {
-    width: 290px;
+    width: 30%;
     text-align: left;
     font-size: 14px;
     font-weight: bold;
@@ -150,16 +112,7 @@
     padding-top: 7px;
     height: 24px;
     vertical-align: top;
-	/* css3 horizontal gray gradient */
-	background: #666666; /* Old browsers */
-	background: -moz-linear-gradient(left, #666666 0%, #F0F0F0 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#666666), color-stop(100%,#F0F0F0)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, #666666 0%,#F0F0F0 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, #666666 0%,#F0F0F0 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(left, #666666 0%,#F0F0F0 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#F0F0F0',GradientType=1 ); /* IE6-9 */
-	background: linear-gradient(left, #666666 0%,#F0F0F0 100%); /* W3C */
-	/* end css3 horizontal gray gradient */
+	background: #666666;
 }
 
 .Utils_Attachment__table .required_fav_info {
@@ -169,7 +122,7 @@
 }
 
 .attachment_full_note_edit table {
-	width: 800px;
+	width: 95%;
 }
 
 .attachment_full_note_edit .element {
